--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,87 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.fc209b5e250f5c9b0296.hot-update.js": "/js/app.fc209b5e250f5c9b0296.hot-update.js",
+    "/js/app.ee452b5799e52de6a404.hot-update.js": "/js/app.ee452b5799e52de6a404.hot-update.js",
+    "/js/app.557f2d07548cbb092e25.hot-update.js": "/js/app.557f2d07548cbb092e25.hot-update.js",
+    "/js/app.c7fb544389610ea777bd.hot-update.js": "/js/app.c7fb544389610ea777bd.hot-update.js",
+    "/js/app.88fc8f03fa3bf7d215e7.hot-update.js": "/js/app.88fc8f03fa3bf7d215e7.hot-update.js",
+    "/js/app.5e59497d5ec1fb5f5a92.hot-update.js": "/js/app.5e59497d5ec1fb5f5a92.hot-update.js",
+    "/js/app.daa4260b76992204583b.hot-update.js": "/js/app.daa4260b76992204583b.hot-update.js",
+    "/js/app.9900529be7982c3d796b.hot-update.js": "/js/app.9900529be7982c3d796b.hot-update.js",
+    "/js/app.1826a6af34b4fedda509.hot-update.js": "/js/app.1826a6af34b4fedda509.hot-update.js",
+    "/js/app.c95b2fc195128354f92e.hot-update.js": "/js/app.c95b2fc195128354f92e.hot-update.js",
+    "/js/app.b236a28a97567dc1d5f8.hot-update.js": "/js/app.b236a28a97567dc1d5f8.hot-update.js",
+    "/js/app.98008ec1130c0ef50c86.hot-update.js": "/js/app.98008ec1130c0ef50c86.hot-update.js",
+    "/js/app.ef72449ddaabb91b1aef.hot-update.js": "/js/app.ef72449ddaabb91b1aef.hot-update.js",
+    "/js/app.c600de24e7133a37f3e9.hot-update.js": "/js/app.c600de24e7133a37f3e9.hot-update.js",
+    "/js/app.abc24277016f3a52b0b0.hot-update.js": "/js/app.abc24277016f3a52b0b0.hot-update.js",
+    "/js/app.f32614dd36825df6c63e.hot-update.js": "/js/app.f32614dd36825df6c63e.hot-update.js",
+    "/js/app.6a7077ccb4d743b035ba.hot-update.js": "/js/app.6a7077ccb4d743b035ba.hot-update.js",
+    "/js/app.1c0013ff69457e31817c.hot-update.js": "/js/app.1c0013ff69457e31817c.hot-update.js",
+    "/js/app.952eb447cccade2ae906.hot-update.js": "/js/app.952eb447cccade2ae906.hot-update.js",
+    "/js/app.b7af705c6d5a71309510.hot-update.js": "/js/app.b7af705c6d5a71309510.hot-update.js",
+    "/js/app.796efc4f8049bf24e5c9.hot-update.js": "/js/app.796efc4f8049bf24e5c9.hot-update.js",
+    "/js/app.87dc01e102c6c670fd32.hot-update.js": "/js/app.87dc01e102c6c670fd32.hot-update.js",
+    "/js/app.408ba47a3e7e245eb83c.hot-update.js": "/js/app.408ba47a3e7e245eb83c.hot-update.js",
+    "/js/app.8ed752bebc4e711f9d29.hot-update.js": "/js/app.8ed752bebc4e711f9d29.hot-update.js",
+    "/js/app.b274fbda8de0cd626b6a.hot-update.js": "/js/app.b274fbda8de0cd626b6a.hot-update.js",
+    "/js/app.583dbbabdbbbe51793da.hot-update.js": "/js/app.583dbbabdbbbe51793da.hot-update.js",
+    "/js/app.64c8bbc9f9c4310c4610.hot-update.js": "/js/app.64c8bbc9f9c4310c4610.hot-update.js",
+    "/js/app.ede89ab6110ae19cc249.hot-update.js": "/js/app.ede89ab6110ae19cc249.hot-update.js",
+    "/js/app.1f59c15597ee42d104aa.hot-update.js": "/js/app.1f59c15597ee42d104aa.hot-update.js",
+    "/js/app.ddb78d1366ac9cfa1480.hot-update.js": "/js/app.ddb78d1366ac9cfa1480.hot-update.js",
+    "/js/app.6aea0e0d0a8c118e1de2.hot-update.js": "/js/app.6aea0e0d0a8c118e1de2.hot-update.js",
+    "/js/app.595ca23162ecbbd5b8d1.hot-update.js": "/js/app.595ca23162ecbbd5b8d1.hot-update.js",
+    "/js/app.b5b379b5ea2cc64f6b8f.hot-update.js": "/js/app.b5b379b5ea2cc64f6b8f.hot-update.js",
+    "/js/app.ed0b14543b2163b5f836.hot-update.js": "/js/app.ed0b14543b2163b5f836.hot-update.js",
+    "/js/app.12712ca327e8a104ceea.hot-update.js": "/js/app.12712ca327e8a104ceea.hot-update.js",
+    "/js/app.18db8768ae5bb5d3f867.hot-update.js": "/js/app.18db8768ae5bb5d3f867.hot-update.js",
+    "/js/app.fe9f7d8c386220981937.hot-update.js": "/js/app.fe9f7d8c386220981937.hot-update.js",
+    "/js/app.fc711fb997fea5a06fa6.hot-update.js": "/js/app.fc711fb997fea5a06fa6.hot-update.js",
+    "/js/app.5c04354b68498b91b58f.hot-update.js": "/js/app.5c04354b68498b91b58f.hot-update.js",
+    "/js/app.462c07feb5b84985f293.hot-update.js": "/js/app.462c07feb5b84985f293.hot-update.js",
+    "/js/app.6036b8b2dbe226a7a7ad.hot-update.js": "/js/app.6036b8b2dbe226a7a7ad.hot-update.js",
+    "/js/app.d7bd60d3995d050ed83d.hot-update.js": "/js/app.d7bd60d3995d050ed83d.hot-update.js",
+    "/js/app.1f4b8e242ad522f130e7.hot-update.js": "/js/app.1f4b8e242ad522f130e7.hot-update.js",
+    "/js/app.4e3245e83bf113f88712.hot-update.js": "/js/app.4e3245e83bf113f88712.hot-update.js",
+    "/js/app.580e881958863ca81a5c.hot-update.js": "/js/app.580e881958863ca81a5c.hot-update.js",
+    "/js/app.50377c656aaa748c87ce.hot-update.js": "/js/app.50377c656aaa748c87ce.hot-update.js",
+    "/js/app.3ef0f0f243535d02c37e.hot-update.js": "/js/app.3ef0f0f243535d02c37e.hot-update.js",
+    "/js/app.d4a5eb766330871fb8e4.hot-update.js": "/js/app.d4a5eb766330871fb8e4.hot-update.js",
+    "/js/app.e6b73c5ee676ca7fd69f.hot-update.js": "/js/app.e6b73c5ee676ca7fd69f.hot-update.js",
+    "/js/app.285383383efdcfcc96b1.hot-update.js": "/js/app.285383383efdcfcc96b1.hot-update.js",
+    "/js/app.a5fbe4475313e016544f.hot-update.js": "/js/app.a5fbe4475313e016544f.hot-update.js",
+    "/js/app.23528198cae793ea03a4.hot-update.js": "/js/app.23528198cae793ea03a4.hot-update.js",
+    "/js/app.9537d2d5f83b529c4e6f.hot-update.js": "/js/app.9537d2d5f83b529c4e6f.hot-update.js",
+    "/js/app.3375a27768560405113c.hot-update.js": "/js/app.3375a27768560405113c.hot-update.js",
+    "/js/app.61f05f243480bcae71fb.hot-update.js": "/js/app.61f05f243480bcae71fb.hot-update.js",
+    "/js/app.36017c70bce113ba2216.hot-update.js": "/js/app.36017c70bce113ba2216.hot-update.js",
+    "/js/app.3b1307a4a535c337ce02.hot-update.js": "/js/app.3b1307a4a535c337ce02.hot-update.js",
+    "/js/app.89585e964c8b5518c276.hot-update.js": "/js/app.89585e964c8b5518c276.hot-update.js",
+    "/js/app.34e8d01dc9dd1ec028b8.hot-update.js": "/js/app.34e8d01dc9dd1ec028b8.hot-update.js",
+    "/js/app.c41bf46152ccd25d866f.hot-update.js": "/js/app.c41bf46152ccd25d866f.hot-update.js",
+    "/js/app.be088ecb394ac93eabe2.hot-update.js": "/js/app.be088ecb394ac93eabe2.hot-update.js",
+    "/js/app.bfb15424cf405eb5c04a.hot-update.js": "/js/app.bfb15424cf405eb5c04a.hot-update.js",
+    "/js/app.4ea6a5f76606e00cc264.hot-update.js": "/js/app.4ea6a5f76606e00cc264.hot-update.js",
+    "/js/app.48638dd818cd6b69aa3a.hot-update.js": "/js/app.48638dd818cd6b69aa3a.hot-update.js",
+    "/js/app.386046a9c3681422a4ad.hot-update.js": "/js/app.386046a9c3681422a4ad.hot-update.js",
+    "/js/app.960d2e101c09fc6c996f.hot-update.js": "/js/app.960d2e101c09fc6c996f.hot-update.js",
+    "/js/app.93d4667ea8b601afcf2a.hot-update.js": "/js/app.93d4667ea8b601afcf2a.hot-update.js",
+    "/js/app.329d0b3bf1152ee116e0.hot-update.js": "/js/app.329d0b3bf1152ee116e0.hot-update.js",
+    "/js/app.dc317805f428744f480c.hot-update.js": "/js/app.dc317805f428744f480c.hot-update.js",
+    "/js/app.1c22fe86007792fa4380.hot-update.js": "/js/app.1c22fe86007792fa4380.hot-update.js",
+    "/js/app.d2df4a55abc1898941c6.hot-update.js": "/js/app.d2df4a55abc1898941c6.hot-update.js",
+    "/js/app.83a88d151c6316d7acaa.hot-update.js": "/js/app.83a88d151c6316d7acaa.hot-update.js",
+    "/js/app.41d0063b0124bb3c7b90.hot-update.js": "/js/app.41d0063b0124bb3c7b90.hot-update.js",
+    "/js/app.807c656352fa7469012f.hot-update.js": "/js/app.807c656352fa7469012f.hot-update.js",
+    "/js/app.0ee7ff62e0b4a94bafe2.hot-update.js": "/js/app.0ee7ff62e0b4a94bafe2.hot-update.js",
+    "/js/app.342795bdf2e91cb964c7.hot-update.js": "/js/app.342795bdf2e91cb964c7.hot-update.js",
+    "/js/app.1fe50e0e6ff56ba85eaa.hot-update.js": "/js/app.1fe50e0e6ff56ba85eaa.hot-update.js",
+    "/js/app.a91922151f85259b39bf.hot-update.js": "/js/app.a91922151f85259b39bf.hot-update.js",
+    "/js/app.9079267714bef6b4873a.hot-update.js": "/js/app.9079267714bef6b4873a.hot-update.js",
+    "/js/app.26722ab9509a22e9becf.hot-update.js": "/js/app.26722ab9509a22e9becf.hot-update.js",
+    "/js/app.871cdb6c0f5114e5141d.hot-update.js": "/js/app.871cdb6c0f5114e5141d.hot-update.js",
+    "/js/app.be86e18eb436d766effe.hot-update.js": "/js/app.be86e18eb436d766effe.hot-update.js",
+    "/js/app.1e462bd96c7207764b08.hot-update.js": "/js/app.1e462bd96c7207764b08.hot-update.js"
 }
