--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -110,5 +110,27 @@
     "/js/app.ed88fa744679c67684ee.hot-update.js": "/js/app.ed88fa744679c67684ee.hot-update.js",
     "/js/app.21b0656900defa3ee529.hot-update.js": "/js/app.21b0656900defa3ee529.hot-update.js",
     "/js/app.ce3f8b8a7ca50c3737f1.hot-update.js": "/js/app.ce3f8b8a7ca50c3737f1.hot-update.js",
-    "/js/app.574c369bf0f26bfa5d53.hot-update.js": "/js/app.574c369bf0f26bfa5d53.hot-update.js"
+    "/js/app.574c369bf0f26bfa5d53.hot-update.js": "/js/app.574c369bf0f26bfa5d53.hot-update.js",
+    "/js/app.ad8e45978947e78e05d0.hot-update.js": "/js/app.ad8e45978947e78e05d0.hot-update.js",
+    "/js/app.0a11541099f6cd48f69d.hot-update.js": "/js/app.0a11541099f6cd48f69d.hot-update.js",
+    "/js/app.a480835abce1d90705a1.hot-update.js": "/js/app.a480835abce1d90705a1.hot-update.js",
+    "/js/app.c05430ddd12501237ff1.hot-update.js": "/js/app.c05430ddd12501237ff1.hot-update.js",
+    "/js/app.51483ea10eca25dcb54c.hot-update.js": "/js/app.51483ea10eca25dcb54c.hot-update.js",
+    "/js/app.80c88aa78addac729b4e.hot-update.js": "/js/app.80c88aa78addac729b4e.hot-update.js",
+    "/js/app.802b9bb3b8aff2bb0b2b.hot-update.js": "/js/app.802b9bb3b8aff2bb0b2b.hot-update.js",
+    "/js/app.902c63fb91b75056c85d.hot-update.js": "/js/app.902c63fb91b75056c85d.hot-update.js",
+    "/js/app.532c1a4f9f0631e1e41e.hot-update.js": "/js/app.532c1a4f9f0631e1e41e.hot-update.js",
+    "/js/app.78816e5a81d944ce7cbf.hot-update.js": "/js/app.78816e5a81d944ce7cbf.hot-update.js",
+    "/js/app.0582fb4596bca12190b6.hot-update.js": "/js/app.0582fb4596bca12190b6.hot-update.js",
+    "/js/app.e632f449f9bf5eefd32e.hot-update.js": "/js/app.e632f449f9bf5eefd32e.hot-update.js",
+    "/js/app.ca33471e6e48badece61.hot-update.js": "/js/app.ca33471e6e48badece61.hot-update.js",
+    "/js/app.11a2aee772da06b1d5b6.hot-update.js": "/js/app.11a2aee772da06b1d5b6.hot-update.js",
+    "/js/app.5063aebde857595a77c8.hot-update.js": "/js/app.5063aebde857595a77c8.hot-update.js",
+    "/js/app.a347ad05e25ee4c8faac.hot-update.js": "/js/app.a347ad05e25ee4c8faac.hot-update.js",
+    "/js/app.6100a86627a9bd3128e1.hot-update.js": "/js/app.6100a86627a9bd3128e1.hot-update.js",
+    "/js/app.a9b602f6dfbe2d8f849c.hot-update.js": "/js/app.a9b602f6dfbe2d8f849c.hot-update.js",
+    "/js/app.bd290aedc72795574320.hot-update.js": "/js/app.bd290aedc72795574320.hot-update.js",
+    "/js/app.7fd67217124444423d0c.hot-update.js": "/js/app.7fd67217124444423d0c.hot-update.js",
+    "/js/app.a589b3ef08f3cec46e0d.hot-update.js": "/js/app.a589b3ef08f3cec46e0d.hot-update.js",
+    "/js/app.398f2a0c8819ecfef812.hot-update.js": "/js/app.398f2a0c8819ecfef812.hot-update.js"
 }
