--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -98,5 +98,57 @@
     "/js/app.51a75aeae625aa420ecb.hot-update.js": "/js/app.51a75aeae625aa420ecb.hot-update.js",
     "/js/app.cb54f7a7cb1785574541.hot-update.js": "/js/app.cb54f7a7cb1785574541.hot-update.js",
     "/js/app.f47a3b019a71926a6a9c.hot-update.js": "/js/app.f47a3b019a71926a6a9c.hot-update.js",
-    "/js/app.dfefbaddc9d1da1dc03d.hot-update.js": "/js/app.dfefbaddc9d1da1dc03d.hot-update.js"
+    "/js/app.dfefbaddc9d1da1dc03d.hot-update.js": "/js/app.dfefbaddc9d1da1dc03d.hot-update.js",
+    "/js/app.7661af64b1eb7077bfa1.hot-update.js": "/js/app.7661af64b1eb7077bfa1.hot-update.js",
+    "/js/app.e8c43e77c62eb91bafed.hot-update.js": "/js/app.e8c43e77c62eb91bafed.hot-update.js",
+    "/js/app.4859f51d8514a81f3fa6.hot-update.js": "/js/app.4859f51d8514a81f3fa6.hot-update.js",
+    "/js/app.6acfcf893963e4251084.hot-update.js": "/js/app.6acfcf893963e4251084.hot-update.js",
+    "/js/app.bfd96a951d0c89dacb72.hot-update.js": "/js/app.bfd96a951d0c89dacb72.hot-update.js",
+    "/js/app.ee2de6b831964ed630bb.hot-update.js": "/js/app.ee2de6b831964ed630bb.hot-update.js",
+    "/js/app.5a3b1946a082b0658be5.hot-update.js": "/js/app.5a3b1946a082b0658be5.hot-update.js",
+    "/js/app.507c29d90a1aa098acdf.hot-update.js": "/js/app.507c29d90a1aa098acdf.hot-update.js",
+    "/js/app.a8ed78773214b1d6b4d2.hot-update.js": "/js/app.a8ed78773214b1d6b4d2.hot-update.js",
+    "/js/app.5448b738a94551e804ad.hot-update.js": "/js/app.5448b738a94551e804ad.hot-update.js",
+    "/js/app.eb7b6c202cac1424fbfd.hot-update.js": "/js/app.eb7b6c202cac1424fbfd.hot-update.js",
+    "/js/app.c57d25cfc137446e17c4.hot-update.js": "/js/app.c57d25cfc137446e17c4.hot-update.js",
+    "/js/app.757b6d89b976b95165d1.hot-update.js": "/js/app.757b6d89b976b95165d1.hot-update.js",
+    "/js/app.7335b7c9af7010acdf6a.hot-update.js": "/js/app.7335b7c9af7010acdf6a.hot-update.js",
+    "/js/app.3d59cb185c2d6c3dcc29.hot-update.js": "/js/app.3d59cb185c2d6c3dcc29.hot-update.js",
+    "/js/app.41d596fddf001b512d74.hot-update.js": "/js/app.41d596fddf001b512d74.hot-update.js",
+    "/js/app.91a88813500a7e462f19.hot-update.js": "/js/app.91a88813500a7e462f19.hot-update.js",
+    "/js/app.9635e3fe6323b7bfc59f.hot-update.js": "/js/app.9635e3fe6323b7bfc59f.hot-update.js",
+    "/js/app.5fb4e1fc718416433e22.hot-update.js": "/js/app.5fb4e1fc718416433e22.hot-update.js",
+    "/js/app.830ea4d674ce86c0401f.hot-update.js": "/js/app.830ea4d674ce86c0401f.hot-update.js",
+    "/js/app.b08e485d08a2301ff176.hot-update.js": "/js/app.b08e485d08a2301ff176.hot-update.js",
+    "/js/app.11791dff8d34845445ce.hot-update.js": "/js/app.11791dff8d34845445ce.hot-update.js",
+    "/js/app.1b8550380b287c6f6348.hot-update.js": "/js/app.1b8550380b287c6f6348.hot-update.js",
+    "/js/app.f6765dec64eb25ae9006.hot-update.js": "/js/app.f6765dec64eb25ae9006.hot-update.js",
+    "/js/app.8d7004c8ca4f1b64a0de.hot-update.js": "/js/app.8d7004c8ca4f1b64a0de.hot-update.js",
+    "/js/app.81ec09f9df9663c61ff5.hot-update.js": "/js/app.81ec09f9df9663c61ff5.hot-update.js",
+    "/js/app.97c97ec0d1c0ddea3391.hot-update.js": "/js/app.97c97ec0d1c0ddea3391.hot-update.js",
+    "/js/app.f654f12182454b5936dd.hot-update.js": "/js/app.f654f12182454b5936dd.hot-update.js",
+    "/js/app.580d20faced7edd1e070.hot-update.js": "/js/app.580d20faced7edd1e070.hot-update.js",
+    "/js/app.61144266622e82a8d2e0.hot-update.js": "/js/app.61144266622e82a8d2e0.hot-update.js",
+    "/js/app.cbc7c2c666c12933ad09.hot-update.js": "/js/app.cbc7c2c666c12933ad09.hot-update.js",
+    "/js/app.cdd42766e4e090ccffd7.hot-update.js": "/js/app.cdd42766e4e090ccffd7.hot-update.js",
+    "/js/app.3c73122920edd28a6c24.hot-update.js": "/js/app.3c73122920edd28a6c24.hot-update.js",
+    "/js/app.73c3c7dd5aef19833082.hot-update.js": "/js/app.73c3c7dd5aef19833082.hot-update.js",
+    "/js/app.dd9a4c2b0eda9e461eaa.hot-update.js": "/js/app.dd9a4c2b0eda9e461eaa.hot-update.js",
+    "/js/app.ffa35ea77a54de6ea369.hot-update.js": "/js/app.ffa35ea77a54de6ea369.hot-update.js",
+    "/js/app.ece70989946a7e19834f.hot-update.js": "/js/app.ece70989946a7e19834f.hot-update.js",
+    "/js/app.3abc147c280844dca1b1.hot-update.js": "/js/app.3abc147c280844dca1b1.hot-update.js",
+    "/js/app.7bb3f795f70f5d5f9fdb.hot-update.js": "/js/app.7bb3f795f70f5d5f9fdb.hot-update.js",
+    "/js/app.55483a800600e07e93e2.hot-update.js": "/js/app.55483a800600e07e93e2.hot-update.js",
+    "/js/app.846687da5273937dba6b.hot-update.js": "/js/app.846687da5273937dba6b.hot-update.js",
+    "/js/app.3f7c43b06f3d21895200.hot-update.js": "/js/app.3f7c43b06f3d21895200.hot-update.js",
+    "/js/app.36484de2f8d9a981a25d.hot-update.js": "/js/app.36484de2f8d9a981a25d.hot-update.js",
+    "/js/app.7c99fa1cbb0f0ec2c9a1.hot-update.js": "/js/app.7c99fa1cbb0f0ec2c9a1.hot-update.js",
+    "/js/app.7676e7da997e42c7eb3b.hot-update.js": "/js/app.7676e7da997e42c7eb3b.hot-update.js",
+    "/js/app.f9e94174419c273a4a2f.hot-update.js": "/js/app.f9e94174419c273a4a2f.hot-update.js",
+    "/js/app.706d76df9713b8e5d9d8.hot-update.js": "/js/app.706d76df9713b8e5d9d8.hot-update.js",
+    "/js/app.2a06e5e0412c9d165db7.hot-update.js": "/js/app.2a06e5e0412c9d165db7.hot-update.js",
+    "/js/app.e1708d308c126fc6a9ae.hot-update.js": "/js/app.e1708d308c126fc6a9ae.hot-update.js",
+    "/js/app.1a567144e867f0a881ac.hot-update.js": "/js/app.1a567144e867f0a881ac.hot-update.js",
+    "/js/app.ffd57c2184f2765bab6a.hot-update.js": "/js/app.ffd57c2184f2765bab6a.hot-update.js",
+    "/js/app.2061aa2b8bab28a0a717.hot-update.js": "/js/app.2061aa2b8bab28a0a717.hot-update.js"
 }
