--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,18 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.a12a541ad17521266b04.hot-update.js": "/js/app.a12a541ad17521266b04.hot-update.js",
-    "/js/app.3a20df5b66b53c5edf12.hot-update.js": "/js/app.3a20df5b66b53c5edf12.hot-update.js",
-    "/js/app.7ce2454820c47e56af76.hot-update.js": "/js/app.7ce2454820c47e56af76.hot-update.js",
-    "/js/app.81a5e4a77b2e647f8c00.hot-update.js": "/js/app.81a5e4a77b2e647f8c00.hot-update.js",
-    "/js/app.9221ede3b63d9bb5b4d8.hot-update.js": "/js/app.9221ede3b63d9bb5b4d8.hot-update.js",
-    "/js/app.f88b7233d6a3b281a3f6.hot-update.js": "/js/app.f88b7233d6a3b281a3f6.hot-update.js",
-    "/js/app.ee93166ecfebbdeb2384.hot-update.js": "/js/app.ee93166ecfebbdeb2384.hot-update.js",
-    "/js/app.1e7b555877f5c5cba838.hot-update.js": "/js/app.1e7b555877f5c5cba838.hot-update.js",
-    "/js/app.2a0a501f58346a1d4d05.hot-update.js": "/js/app.2a0a501f58346a1d4d05.hot-update.js",
-    "/js/app.7a13c5be040da43b5e6c.hot-update.js": "/js/app.7a13c5be040da43b5e6c.hot-update.js",
-    "/js/app.6d577175c7db600598bf.hot-update.js": "/js/app.6d577175c7db600598bf.hot-update.js",
-    "/js/app.338db2417d6687608312.hot-update.js": "/js/app.338db2417d6687608312.hot-update.js",
-    "/js/app.aa10a8acc99ab7273088.hot-update.js": "/js/app.aa10a8acc99ab7273088.hot-update.js",
-    "/js/app.1b2d691e862149602f6b.hot-update.js": "/js/app.1b2d691e862149602f6b.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
