--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,12 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.3047cbb7d6ea50e833da.hot-update.js": "/js/app.3047cbb7d6ea50e833da.hot-update.js",
+    "/js/app.ba526db5a4dce928993b.hot-update.js": "/js/app.ba526db5a4dce928993b.hot-update.js",
+    "/js/app.3d41586ca4ffbaac91c7.hot-update.js": "/js/app.3d41586ca4ffbaac91c7.hot-update.js",
+    "/js/app.19095ec8d3caaacdb9c3.hot-update.js": "/js/app.19095ec8d3caaacdb9c3.hot-update.js",
+    "/js/app.542df05354b87354761f.hot-update.js": "/js/app.542df05354b87354761f.hot-update.js",
+    "/js/app.c2c98ddae9860c7eec8d.hot-update.js": "/js/app.c2c98ddae9860c7eec8d.hot-update.js",
+    "/js/app.1c8b5efedd25efefdec2.hot-update.js": "/js/app.1c8b5efedd25efefdec2.hot-update.js",
+    "/js/app.1ba4c26f98b2e52c0ff2.hot-update.js": "/js/app.1ba4c26f98b2e52c0ff2.hot-update.js"
 }
